# nibbler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Gaelle_temp_script.sh  Makefile  README  auteur  cmake_install.cmake  install.sh  main.cpp  main.cpp~  script.sh  snake  uninstall.sh
Ncurses/: Makefile
Ncurses/includes/: window.hpp
Ncurses/src/: lib.cpp  window.cpp
Qt/: Makefile  main.cpp
Qt/includes/: window.hpp  window.hpp.gch  window.hpp~
Qt/src/: lib.cpp  lib.cpp~  window.cpp  window.cpp~
SDL/: Makefile
SDL/includes/: SDL.hpp
SDL/src/: SDL.cpp
SFML/: Makefile
SFML/includes/: SFMLLib.hpp
SFML/src/: SFMLLib.cpp
main/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
main/includes/: ALib.hpp  Element.hpp  Food.hpp  GameState.hpp  ILib.hpp  Lib.hpp  Snake.hpp  main.hpp
main/src/: #GameState.cpp#  #main.cpp#  .#main.cpp  Element.cpp  Food.cpp  GameState.cpp  Lib.cpp  Snake.cpp  algo.cpp  main.cpp  main.cpp~
